@@ -1,12 +1,9 @@
 package com.oasis.ocrspring.controller;
 
 import com.oasis.ocrspring.dto.*;
-import com.oasis.ocrspring.model.Request;
-import com.oasis.ocrspring.model.User;
-import com.oasis.ocrspring.service.RequestService;
+import com.oasis.ocrspring.model.*;
+import com.oasis.ocrspring.service.*;
 import com.oasis.ocrspring.service.ResponseMessages.ErrorMessage;
-import com.oasis.ocrspring.service.ReviewerResDto;
-import com.oasis.ocrspring.service.UserService;
 import com.oasis.ocrspring.service.auth.AuthenticationToken;
 import com.oasis.ocrspring.service.auth.TokenService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,59 +11,77 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import springfox.documentation.annotations.ApiIgnore;
 
+import javax.mail.MessagingException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/admin")
 public class AdminController {
     // connect admin to the service layer
+    private final TokenService tokenService;
+    private final RequestService requestService;
+    private final AuthenticationToken authenticationToken;
+    private final UserService userService;
+    private final RoleService roleService;
+    private final OptionService optionService;
+    private final HospitalService hospitalService;
+
     @Autowired
-    TokenService tokenService;
-    @Autowired
-    RequestService requestService;
-    @Autowired
-    AuthenticationToken authenticationToken;
-    @Autowired
-    UserService userService;
+    public AdminController(TokenService tokenService, RequestService requestService, AuthenticationToken authenticationToken,
+                           UserService userService, RoleService roleService, OptionService optionService, HospitalService hospitalService) {
+        this.tokenService = tokenService;
+        this.requestService = requestService;
+        this.authenticationToken = authenticationToken;
+        this.userService = userService;
+        this.roleService = roleService;
+        this.optionService = optionService;
+        this.hospitalService = hospitalService;
+    }
 
     @ApiIgnore
     @RequestMapping(value = "/")
     public void redirect(HttpServletResponse response) throws IOException {
         response.sendRedirect("/swagger-ui.html");
     }
+    static String unAuthorized = "Unauthorized access";
+    static String internalServerError = "Internal Server Error!";
+    static String userNotFund = "User not found";
+    static String roleNotFound = "Role not found";
+    static String requestNotFound = "Request not found";
 
     //get all requests
     @GetMapping("/requests")
     public ResponseEntity<?> getAllRequests(HttpServletRequest request, HttpServletResponse response) throws IOException {
         authenticationToken.authenticateRequest(request, response);
         if (!tokenService.checkPermissions(request, List.of("100"))) {
-            return ResponseEntity.status(401).body(new ErrorMessage("Unauthorized access"));
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
         }
 
         try {
-            List<Request> requests = requestService.AllRequestDetails();
+            List<Request> requests = requestService.allRequestDetails();
             List<RequestResDetailsDto> requestResDetailsDtos = new ArrayList<>();
             for (Request reviewer : requests) {
                 requestResDetailsDtos.add(new RequestResDetailsDto(reviewer));
             }
             return ResponseEntity.ok(requestResDetailsDtos);
         } catch (Exception e) {
-            return ResponseEntity.status(500).body(new ErrorMessage("Internal Server Error!"));
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
         }
     }
+
 
     //get one request
     @GetMapping("/requests/{id}")
     public ResponseEntity<?> getRequest(HttpServletRequest request, HttpServletResponse response, @PathVariable String id) throws IOException {
         authenticationToken.authenticateRequest(request, response);
         if (!tokenService.checkPermissions(request, List.of("100"))) {
-            return ResponseEntity.status(401).body(new ErrorMessage("Unauthorized access"));
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
         }
 
         try {
@@ -74,10 +89,10 @@ public class AdminController {
             if (requestOptional.isPresent()) {
                 return ResponseEntity.ok(new RequestDetailsDto(requestOptional.get()));
             } else {
-                return ResponseEntity.status(404).body(new ErrorMessage("Request not found"));
+                return ResponseEntity.status(404).body(new ErrorMessage(requestNotFound));
             }
         } catch (Exception e) {
-            return ResponseEntity.status(500).body(new ErrorMessage("Internal Server Error!"));
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
         }
     }
 
@@ -87,7 +102,7 @@ public class AdminController {
     public ResponseEntity<?> rejectRequest(HttpServletRequest request, HttpServletResponse response, @PathVariable String id, @RequestBody ReqestDeleteReasonDto reason) throws IOException {
         authenticationToken.authenticateRequest(request, response);
         if (!tokenService.checkPermissions(request, List.of("100"))) {
-            return ResponseEntity.status(401).body(new ErrorMessage("Unauthorized access"));
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
         }
 
         try {
@@ -95,21 +110,26 @@ public class AdminController {
             if (isDeleted) {
                 return ResponseEntity.ok().body(new ErrorMessage("Request has been deleted!"));
             } else {
-                return ResponseEntity.status(404).body(new ErrorMessage("Request not found"));
+                return ResponseEntity.status(404).body(new ErrorMessage(requestNotFound));
             }
-        } catch (Exception e) {
+        }
+        catch (MessagingException e) {
+            throw new EmailSendingException("Failed to send email", e);
+        }catch (Exception e) {
             return ResponseEntity.status(500).body(new ErrorMessage(e.toString()));
-        } catch (ErrorMessage e) {
-            throw new RuntimeException(e);
+        }
+    }
+    static class EmailSendingException extends RuntimeException {
+        public EmailSendingException(String message, Throwable cause) {
+            super(message, cause);
         }
     }
 
+    //approve a request
     @PostMapping("/accept/{id}")
     public ResponseEntity<?> acceptRequest(HttpServletRequest request, HttpServletResponse response, @PathVariable String id, @RequestBody ReqToUserDto userDto) throws IOException {
-        authenticationToken.authenticateRequest(request, response);
-        if (!tokenService.checkPermissions(request, List.of("100"))) {
-            return ResponseEntity.status(401).body(new ErrorMessage("Unauthorized access"));
-        }
+        ResponseEntity<?> authResponse = authenticateAndAuthorize(request, response, List.of("100"));
+        if (authResponse != null) return authResponse;
 
         try {
             Optional<Request> requestOptional = requestService.getRequestById(id);
@@ -123,37 +143,64 @@ public class AdminController {
                     return ResponseEntity.status(401).body(new ErrorMessage("Email address already in use"));
                 }
 
-                User newUser = new User(
-                        userDto.getUsername() != null ? userDto.getUsername() : req.getUserName(),
-                        req.getEmail(),
-                        req.getRegNo(),
-                        userDto.getRole(),
-                        req.getHospital(),
-                        userDto.getDesignation() != null ? userDto.getDesignation() : "",
-                        userDto.getContact_no() != null ? userDto.getContact_no() : "",
-                        true
-                );
+                User newUser = createUserFromRequest(req, userDto);
                 requestService.acceptRequest(id, newUser, userDto.getReason());
                 userService.sendAcceptanceEmail(req.getEmail(), userDto.getReason(), req.getUserName());
-                if(newUser.getUpdatedAt()==null){
-                    return ResponseEntity.ok(new UserResDto(newUser.getUsername(), newUser.getEmail(), newUser.getRegNo(), newUser.getHospital(), newUser.getDesignation(), newUser.getContactNo(),newUser.isAvailable(), newUser.getRole() ,newUser.getId().toString(), newUser.getCreatedAt().toString(),  "User created successfully"));
-                }
-                return ResponseEntity.ok(new UserResDto(newUser.getUsername(), newUser.getEmail(), newUser.getRegNo(), newUser.getHospital(), newUser.getDesignation(), newUser.getContactNo(),newUser.isAvailable(), newUser.getRole() ,newUser.getId().toString(), newUser.getCreatedAt().toString(), newUser.getUpdatedAt().toString(), "User created successfully"));
+                return buildUserResponse(newUser);
             } else {
-                return ResponseEntity.status(404).body(new ErrorMessage("Request not found"));
+                return ResponseEntity.status(404).body(new ErrorMessage(requestNotFound));
             }
-        } catch (Exception e) {
-            return ResponseEntity.status(500).body(new ErrorMessage("Internal Server Error!"));
-        } catch (ErrorMessage e) {
+        } catch (MessagingException e) {
             return ResponseEntity.status(500).body(e);
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
         }
-
     }
 
-
-
-    //approve a request
-
+    private ResponseEntity<?> authenticateAndAuthorize(HttpServletRequest request, HttpServletResponse response, List<String> permissions) throws IOException {
+        authenticationToken.authenticateRequest(request, response);
+        if (!tokenService.checkPermissions(request, permissions)) {
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
+        }
+        return null;
+    }
+    private User createUserFromRequest(Request req, ReqToUserDto userDto) {
+        return new User(
+                userDto.getUsername() != null ? userDto.getUsername() : req.getUserName(),
+                req.getEmail(),
+                req.getRegNo(),
+                userDto.getRole(),
+                req.getHospital(),
+                userDto.getDesignation() != null ? userDto.getDesignation() : "",
+                userDto.getContact_no() != null ? userDto.getContact_no() : "",
+                true
+        );
+    }
+    private ResponseEntity<?> buildUserResponse(User newUser) {
+        if (newUser.getUpdatedAt() == null) {
+            return ResponseEntity.ok(new UserResDto(
+                    newUser.getUsername(),
+                    newUser.getEmail(), newUser.getRegNo(),
+                    newUser.getHospital(), newUser.getDesignation(),
+                    newUser.getContactNo(), newUser.isAvailable(),
+                    newUser.getRole(),
+                    newUser.getId().toString(),
+                    newUser.getCreatedAt().toString(),
+                    "User created successfully"));
+        }
+        return ResponseEntity.ok(new UserResDto(
+                newUser.getUsername(),
+                newUser.getEmail(),
+                newUser.getRegNo(),
+                newUser.getHospital(),
+                newUser.getDesignation(),
+                newUser.getContactNo(),
+                newUser.isAvailable(),
+                newUser.getRole(),
+                newUser.getId().toString(),
+                newUser.getCreatedAt().toString(),
+                newUser.getUpdatedAt().toString(), "User created successfully"));
+    }
 
     //get users by thier roles
     //only for read or write access permission
@@ -161,7 +208,7 @@ public class AdminController {
     public ResponseEntity<?> getUsersByRole(HttpServletRequest request, HttpServletResponse response, @PathVariable String role) throws IOException {
         authenticationToken.authenticateRequest(request, response);
         if (!tokenService.checkPermissions(request, List.of("106", "107"))) {
-            return ResponseEntity.status(401).body(new ErrorMessage("Unauthorized access"));
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
         }
 
         try {
@@ -192,89 +239,319 @@ public class AdminController {
                             user.getCreatedAt().toString(),
                             user.getUpdatedAt() != null ? user.getUpdatedAt().toString() : null,
                             null))
-                    .collect(Collectors.toList());
+                    .toList();
 
             return ResponseEntity.ok(userResDtos);
         } catch (Exception e) {
-            return ResponseEntity.status(500).body(new ErrorMessage("Internal Server Error!"));
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
         }
     }
 
     //get all user roles
+
     @GetMapping("/roles")
-    public String getAllRoles() {
-        return "/api/admin/roles";
+    public ResponseEntity<?> getAllRoles(HttpServletRequest request, HttpServletResponse response) throws IOException {
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
+
+        // Check permissions
+        if (!tokenService.checkPermissions(request, List.of("106", "107", "100", "109"))) {
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
+        }
+
+        try {
+            List<Role> roles = roleService.allRoleDetails();
+            return ResponseEntity.ok(roles);
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
+        }
     }
+
 
     //get one user role
     @GetMapping("/roles/{id}")
-    public String getRole(long id) {
-        return "/api/admin/roles/" + id;
+    public ResponseEntity<?> getRoleById(HttpServletRequest request, HttpServletResponse response, @PathVariable String id) throws IOException {
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
+
+        // Check permissions
+        if (!tokenService.checkPermissions(request, List.of("109"))) {
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
+        }
+
+        try {
+            Optional<Role> role = roleService.getRoleById(id);
+            if (role.isPresent()) {
+                return ResponseEntity.ok(role.get());
+            } else {
+                return ResponseEntity.status(404).body(new ErrorMessage(roleNotFound));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
+        }
     }
 
     //add a new role
     @PostMapping("/roles")
-    public String addRole() {
-        return "/api/admin/roles";
+    public ResponseEntity<ErrorMessage> addRole(HttpServletRequest request, HttpServletResponse response, @RequestBody RoleReqDto role) throws IOException{
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
+
+        // Check permissions
+        if (!tokenService.checkPermissions(request, List.of("109"))) {
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
+        }
+
+        try {
+            boolean isRoleAdded = roleService.addRole(role);
+            if (isRoleAdded) {
+                return ResponseEntity.ok(new ErrorMessage("New role added successfully"));
+            } else {
+
+                return ResponseEntity.status(401).body(new ErrorMessage("Role already exists"));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
+        }
     }
 
     //update user permission
     @PostMapping("/roles/{id}")
-    public String updateRole(long id) {
-        return "/api/admin/roles/" + id;
+    public ResponseEntity<ErrorMessage> updateRole(HttpServletRequest request, HttpServletResponse response, @PathVariable String id, @RequestBody RoleDto roleDetails) throws IOException {
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
+
+        // Check permissions
+        if (!tokenService.checkPermissions(request, List.of("109"))) {
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
+        }
+
+        try {
+            Optional<Role> role = roleService.getRoleById(id);
+            if (role.isPresent()) {
+                roleService.updateRole(id, roleDetails);
+                return ResponseEntity.ok(new ErrorMessage("Role updated successfully"));
+            } else {
+                return ResponseEntity.status(404).body(new ErrorMessage(roleNotFound));
+            }
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(404).body(new ErrorMessage(roleNotFound));
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
+        }
     }
 
     //get a specific user
     @GetMapping("/users/{id}")
-    public String getUser(long id) {
-        return "/api/admin/users/" + id;
+    public ResponseEntity<?> getUserById(HttpServletRequest request, HttpServletResponse response, @PathVariable String id) throws IOException {
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
+
+        // Check permissions
+        if (!tokenService.checkPermissions(request, List.of("106", "107"))) {
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
+        }
+
+        try {
+            Optional<User> user = userService.getUserById(id);
+            if (user.isPresent()) {
+                return ResponseEntity.ok(new UserResDto(user.get()));
+            } else {
+                return ResponseEntity.status(404).body(new ErrorMessage(userNotFund));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
+        }
     }
 
     //update a user
-    @PostMapping("update/users/{id}")
-    public String updateUser(@PathVariable long id) {
-        return "/api/admin/update/users/" + id;
+    @PostMapping("/update/user/{id}")
+    public ResponseEntity<?> updateUser(HttpServletRequest request, HttpServletResponse response, @PathVariable String id, @RequestBody UserNameAndRoleDto userDetails) throws IOException {
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
+
+        // Check permissions
+        if (!tokenService.checkPermissions(request, List.of("107"))) {
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
+        }
+
+        try {
+            Optional<User> user = userService.getUserById(id);
+            if (user.isPresent()) {
+                userService.updateUser(id, userDetails);
+                User updatedUser = userService.getUserById(id).orElseThrow(() -> new RuntimeException(userNotFund));
+                UserResDto userResDto = new UserResDto(updatedUser);
+                userResDto.setMessage("User details updated successfully");
+                return ResponseEntity.ok(userResDto);
+            } else {
+                return ResponseEntity.status(404).body(new ErrorMessage(userNotFund));
+            }
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(404).body(new ErrorMessage(userNotFund));
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
+        }
     }
 
     //delete a user
-    @PostMapping("delete/users/{id}")
-    public String deleteUser(long id) {
-        return "/api/admin/delete/users/" + id;
+
+    @PostMapping("/delete/user/{id}")
+    public ResponseEntity<ErrorMessage> deleteUser(HttpServletRequest request, HttpServletResponse response, @PathVariable String id) throws IOException {
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
+        if (!tokenService.checkPermissions(request, List.of("107"))) {
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
+        }
+
+        try {
+            boolean isDeleted = userService.deleteUser(id);
+            if (isDeleted) {
+                return ResponseEntity.ok(new ErrorMessage("User deleted successfully"));
+            } else {
+                return ResponseEntity.status(404).body(new ErrorMessage("User not found"));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
+        }
     }
 
     //add hospital
     @PostMapping("/hospital")
-    public String addHospital() {
-        return "/api/admin/hospital";
+    public ResponseEntity<ErrorMessage> addHospital(HttpServletRequest request, HttpServletResponse response, @RequestBody HospitalDto hospitalDetails) throws IOException {
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
+
+        // Check permissions
+        if (!tokenService.checkPermissions(request, List.of("101"))) {
+            return ResponseEntity.status(401).body(new ErrorMessage(unAuthorized));
+        }
+
+        try {
+            boolean isAdded = hospitalService.addHospital(hospitalDetails);
+            if (isAdded) {
+                return ResponseEntity.ok(new ErrorMessage("Hospital is added successfully!"));
+            } else {
+                return ResponseEntity.status(401).body(new ErrorMessage("Hospital is already added"));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new ErrorMessage(internalServerError));
+        }
     }
 
     //update hospital details
     @PostMapping("/hospitals/update/{id}")
-    public String updateHospital(long id) {
-        return "/api/admin/hospitals/update/" + id;
+    public ResponseEntity<MessageDto> updateHospital(HttpServletRequest request, HttpServletResponse response, @PathVariable String id, @RequestBody HospitalDto hospitalDetails) throws IOException {
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
+
+        // Check permissions
+        if (!tokenService.checkPermissions(request, List.of("101"))) {
+            return ResponseEntity.status(401).body(new MessageDto(unAuthorized));
+        }
+
+        try {
+            Optional<Hospital> hospital = hospitalService.getHospitalById(id);
+            if (hospital.isPresent()) {
+                hospitalService.updateHospital(id, hospitalDetails);
+                return ResponseEntity.ok(new MessageDto("Hospital details updated successfully!"));
+            } else {
+                return ResponseEntity.status(404).body(new MessageDto("Hospital Not Found"));
+            }
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(404).body(new MessageDto("Hospital Not Found"));
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new MessageDto(internalServerError));
+        }
     }
 
     //delete hospital
     @PostMapping("/hospitals/delete/{id}")
-    public String deleteHospital(long id) {
-        return "/api/admin/hospitals/delete/" + id;
-    }
+    public ResponseEntity<MessageDto> deleteHospital(HttpServletRequest request, HttpServletResponse response, @PathVariable String id) throws IOException {
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
 
+        // Check permissions
+        if (!tokenService.checkPermissions(request, List.of("101"))) {
+            return ResponseEntity.status(401).body(new MessageDto(unAuthorized));
+        }
+
+        try {
+            boolean isDeleted = hospitalService.deleteHospital(id);
+            if (isDeleted) {
+                return ResponseEntity.ok(new MessageDto("Hospital deleted successfully"));
+            } else {
+                return ResponseEntity.status(404).body(new MessageDto("Hospital not found"));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new MessageDto(internalServerError));
+        }
+    }
     //get all hospitals
     @GetMapping("/hospitals/{id}")
-    public String getHospital(long id) {
-        return "/api/admin/hospitals/" + id;
+    public ResponseEntity<?> getHospitalDetails(HttpServletRequest request, HttpServletResponse response, @PathVariable String id) throws IOException {
+        // Authenticate request
+        authenticationToken.authenticateRequest(request, response);
+
+        // Check permissions
+        if (!tokenService.checkPermissions(request, List.of("101"))) {
+            return ResponseEntity.status(401).body(new MessageDto(unAuthorized));
+        }
+
+        try {
+            Optional<Hospital> hospital = hospitalService.getHospitalById(id);
+            if (hospital.isPresent()) {
+                return ResponseEntity.ok(hospital.get());
+            } else {
+                return ResponseEntity.status(404).body(new MessageDto("Hospital not found"));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new MessageDto(internalServerError));
+        }
     }
 
+
+
     //get options (labels and values)
-    @GetMapping("/options/{name}")
-    public String getOptions(String name) {
-        return "/api/admin/options/" + name;
+    @GetMapping("option/{name}")
+    public ResponseEntity<?> getOptionByName(HttpServletRequest request,HttpServletResponse response,@PathVariable String name) throws IOException {
+        authenticationToken.authenticateRequest(request, response);
+
+        try {
+            Option option = optionService.findByName(name);
+            if (option == null) {
+                return ResponseEntity.status(404).body(new MessageDto(name + " not found"));
+            } else {
+                return ResponseEntity.ok(new OptionsDto(option));
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new MessageDto(internalServerError));
+        }
     }
 
     //Only to add options by tech team
-    @PostMapping("/options")
-    public String addOptions() {
-        return "/api/admin/options";
+
+
+
+    @PostMapping("/option")
+    public ResponseEntity<MessageDto> addOption(@RequestBody OptionsDto optionsDto) {
+
+        try {
+            Option existingOption = optionService.findByName(optionsDto.getName());
+            if (existingOption != null) {
+                return ResponseEntity.status(401).body(new MessageDto("Option already exists"));
+            } else {
+                return saveOption(optionsDto);
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new MessageDto(internalServerError));
+        }
+    }
+    private ResponseEntity<MessageDto> saveOption(OptionsDto optionsDto) {
+        try {
+            optionService.saveOption(new Option(optionsDto.getName(), optionsDto.getOptions()));
+            return ResponseEntity.ok(new MessageDto("Option is saved"));
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(new MessageDto(internalServerError));
+        }
     }
 }
